# heart-of-gold

./: .env.example  .gitignore  Dockerfile  Dockerfile.worker  README.md  docker-compose.yml  pyproject.toml
src/core/: __init__.py  settings.py  urls.py
src/core/api/: urls.py
src/core/jobs/: celery.py
src/core/rest_framework/: decorators.py  mixins.py  serializers.py  viewsets.py
src/modules/api/: urls.py
src/modules/api/docs/: urls.py
src/modules/investments/: urls.py
src/modules/investments/funds/: base.py  decorator.py  models.py  registry.py  serializers.py  tasks.py  urls.py  validator.py  viewsets.py
src/modules/investments/funds/inter_conservador_firf_cp/: __init__.py  apps.py  integration.py  models.py  strategy.py  tasks.py
src/modules/investments/funds/inter_conservador_firf_cp/management/commands/: sync_inter_conservador_firf_cp.py  test_inter_cp.py
src/modules/investments/funds/inter_conservador_firf_cp/migrations/: 0001_initial.py
src/modules/investments/funds/migrations/: 0001_initial.py
src/modules/investments/stocks/: apps.py  models.py
src/modules/investments/stocks/api/: serializers.py  urls.py  viewsets.py
src/modules/investments/stocks/migrations/: 0001_initial.py
src/modules/investments/stocks/templates/: stock_list.html
src/modules/investments/stocks/templates/stocks/: invoice_add.html
src/modules/investments/treasury/: __init__.py  apps.py  models.py  serializers.py  tasks.py  urls.py  viewsets.py
src/modules/investments/treasury/integration/: __init__.py  api_data.py  scrap.py
src/modules/investments/treasury/management/commands/: sync_treasury.py
src/modules/investments/treasury/migrations/: 0001_initial.py
src/modules/users/: serializers.py  urls.py  viewsets.py
